[package]
name = "yroom"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yroom"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
lib0 = "0.16.2"
yrs = "0.16.2"
y-sync = "0.2"
pyo3-log = "0.8.1"
log = "0.4.17"
